namespaces/live-1.cloud-platform.service.justice.gov.uk/moj-ds-accessibility-audit/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moj-ds-accessibility-audit
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "OPG"
    cloud-platform.justice.gov.uk/slack-channel: "moj-enablers"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "MOJ Design System: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/moj-ds-accessibility-audit"
    cloud-platform.justice.gov.uk/team-name: "mojds-maintainers"
    cloud-platform.justice.gov.uk/review-after: ""
